# cnpy-cmake

./: CMakeLists.txt  README.md
cmake/: generate_pkg_config.cmake  toolchain_bcc.cmake
example/: CMakeLists.txt  cnpy_example.cpp
src/: CMakeLists.txt  cnpy-config.cmake.in  cnpy.h  cnpy.pc.in
